theme: Add series ToC in post
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,3 +1,5 @@
+{{ partialCached "partials/series.html" . .Page }}
+
 <script src="https://giscus.app/client.js"
         data-repo="ahmubashshir/ahmubashshir.github.io"
         data-repo-id="MDEwOlJlcG9zaXRvcnkzMDA1MTQxMTQ="
