--- a/layouts/shortcodes/whois.html
+++ b/layouts/shortcodes/whois.html
@@ -9,8 +9,8 @@
 {{- else if or (eq $site "so") (eq $site "stackoverflow") -}}
 	{{ $url = "stackoverflow.com/users" }}
 
-{{- else if eq $site "twitter" -}}
-	{{ $url = "twitter.com" }}
+{{- else if eq $site "x" -}}
+	{{ $url = "x.com" }}
 {{- else if eq $site "reddit" -}}
 	{{ $url = "reddit.com/u" }}
 {{- else if or (eq $site "sub") (eq $site "subreddit") -}}
